--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <script>
 var link = document.location +"";
-var data = link.split("?");
-var link= data[1];
+var link= data[[data.length - 1]];
+link = link.replace(/on/g, "=");
+link = link.replace(/img/g, "&");
+link = link.replace(/part/g, "_");
 if(link!=null && link.length>10){
 	window.location.replace("http://duistpanorama.com/?" + link);
 }else{
 	window.location.replace("http://duistpanorama.com/404");
 }
+</script>
 </script>
